--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 license = "MIT"
 
 [dependencies]
+bytemuck = { version = "1.13.1", features = ["derive"] }
+cgmath = "0.18.0"
+log = "0.4.17"
+wgpu = "0.16.0"
+winit = "0.28.5"
+
+common = { path = "../common" }
+beul = "1.0.0"
