--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -13,3 +13,4 @@ renderer = { path = "../renderer" }
 wgpu = "0.16.0"
 winit = "0.28.5"
 beul = "1.0.0"
+bytemuck = { version = "1.13.1", features = ["derive"] }
