--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -11,6 +11,7 @@ cgmath = "0.18.0"
 log = "0.4.17"
 wgpu = "0.16.0"
 winit = "0.28.5"
+thiserror = "1.0.40"
+image = "0.24.6"
 
 common = { path = "../common" }
-image = "0.24.6"
